--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ header {
     padding: 20px;
     text-align: center;
 }
+header 1 {
+    color: #00cc66;
+}
 nav a {
     color: #fff;
     margin: 0 10px;
