--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 header {
   background-image: url('https://raw.githubusercontent.com/fix2go/fix2go.co/main/images/70FF015D-DD17-493C-AAF6-6787379E2D8C.PNG');
   background-size: cover;
-  background-position: top center;
+  background-position: center center;
   background-repeat: no-repeat;
   padding: 50px 10px;
   color: #00cc00;
