--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ header {
   padding: 50px 10px;
   color: #00cc00;
   text-align: center;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 header h1 {
     color: #00cc00;
