--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ header {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  padding: 50px 10px;
+  padding: 0;
+  margin: 0;
   color: #00cc00;
   text-align: center;
     height: 12vh;
