--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ header {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  padding: 0;
-  margin: 0;
+  padding: 50px 20px;
   color: #00cc00;
   text-align: center;
     height: 12vh;
